# fine_tune_llm

./: README.md  env_file_example  pyproject.toml  requirements.txt
apps/: Home.py  main.py
apps/pages/: 01_create_experiment.py  02_create_trial.py  03_Run_Extraction.py  03_extraction_results.py  03_run_extraction.py  03_run_extraction_validation.py  03_run_validation.py  04_Inspect_Extractions.py  04_inspect_experiment_trial_results.py  06_Create_Model_Card.py  :
configurations/: chroma.yaml  connections.yaml  experiment.yaml  trial.yaml
examples/: .inspect_validation_datasets.py.swp  chunk_text.py  clean_text.py  connect_chromadb.py  create_collection_upsert_chromadb.py  create_filing_index_table.py  create_mysql_models_table.sql  create_sql_table.py  delete_sql_table.py  fetch_all_records_model_table.py  insert_into_models.sql  inspect_company_chunks.sql  llama_index_prompts.py  llama_tokenizer.py  pandas_mysql_insert.py  query_chroma_db.py  test_trial_param_accumulator.py  unpack_filing_archives.py
images/: fine-tune-flow-diagram.excalidraw  rag-diagram.excalidraw
notebooks/: Demo_Regex.ipynb  Regex.ipynb  Untitled.ipynb  clean-text.ipynb
src/: .queries.py.swp  .rag.py.swp  connections.py  queries.py  rag.py  transforms.py  utils.py
transforms/: .create_collection.py.swp  build_filing_chunk_table.py  build_filing_index_table.py  build_validation_datasets.py  build_validation_mysql_tables.py  clean_text.py  create_base_sql_tables.py  create_collection.py  create_experiment_trial.py  create_filing_index_table.py  create_sql_table.py  create_sql_tables.py  unpack_filing_archives.py  unpack_validation_archives.sh
transforms/data/: .clean_text.py.swp  build_validation_mysql_tables.py  create_base_mysql_db.py  create_base_sql_tables.py  create_n_insert_data_filing_index_table.py  insert_data_chromadb_collection.py  insert_data_filing_chunk_table.py  insert_data_filing_chunk_table_async.py  unpack_filing_archives.py  (+2 more)
(+9 files in other folders)
